--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+#site settings
+title: Jonathan Firth – Psychology of Education
+description: This is the summary that shows up in google search results
+
+#build settings
 theme: minima
