--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@
 title: Jonathan Firth – Psychology of Education
 description: This is the summary that shows up in google search results
 
+twitter_username: JW_Firth
+
 #build settings
 theme: minima
