Clean up books formatting

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -5,3 +5,8 @@
   cover: metacognition_study_skills.jpeg
   description: This book for teachers covers every aspect of the metacognitive processes that underpin effective learning, from myths about learning to how a student’s memory really works.<br><br>It is packed with quick-to-apply classroom strategies for before, during, and after tasks, and also covers the independent study skills that students need.<br><br>This is the guide you need to developing a metacognitive approach to teaching, and a culture of metacognition in your whole school.
   link: https://www.routledge.com/Metacognition-and-Study-Skills-A-Guide-for-Teachers/Firth/p/book/9781032480152
+
+- title: Metacognition and Study Skills
+  cover: metacognition_study_skills.jpeg
+  description: This is a second copy of the same book to test that the data file is working. It should be replaced with a different book.
+  link: https://www.routledge.com/Metacognition-and-Study-Skills-A-Guide-for-Teachers/Firth/p/book/9781032480152
