Add url in config to fix images not appearing on deployed site

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,17 @@
 #site settings
 title: Jonathan Firth – Psychology of Education
 description: This is the summary that shows up in google search results
+baseurl: ""
+url: "https://neezes.github.io/skills-github-pages/"
 
+email:
 twitter_username: JW_Firth
 
 #build settings
 theme: minima
+
+#other config
+header_pages:
+- index.md
+- about.md
+- books.md
