--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,6 +1,8 @@
 # if you want a linebreak in the description use <br>
 # you can put multiple for multiple linebreaks
 
+# put cover images in assets folder then copy the filename exactly into cover
+
 - title: Metacognition and Study Skills
   cover: metacognition_study_skills.jpeg
   description: This book for teachers covers every aspect of the metacognitive processes that underpin effective learning, from myths about learning to how a student’s memory really works.<br><br>It is packed with quick-to-apply classroom strategies for before, during, and after tasks, and also covers the independent study skills that students need.<br><br>This is the guide you need to developing a metacognitive approach to teaching, and a culture of metacognition in your whole school.
