--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 #site settings
 title: Jonathan Firth – Psychology of Education
 description: This is the summary that shows up in google search results
+baseurl: "skills-github-pages"
+url: "https://neezes.github.io"
 
 email:
 twitter_username: JW_Firth
