--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jonathan Firth – Psychology of Education
 description: This is the summary that shows up in google search results
 url: "https://neezes.github.io"
-baseurl: "skills-github-pages"
+baseurl: "/skills-github-pages"
 
 email:
 twitter_username: JW_Firth
