--- a/_data/books.yml
+++ b/_data/books.yml
@@ -8,7 +8,27 @@
   description: This book for teachers covers every aspect of the metacognitive processes that underpin effective learning, from myths about learning to how a student’s memory really works.<br><br>It is packed with quick-to-apply classroom strategies for before, during, and after tasks, and also covers the independent study skills that students need.<br><br>This is the guide you need to developing a metacognitive approach to teaching, and a culture of metacognition in your whole school.
   link: https://www.routledge.com/Metacognition-and-Study-Skills-A-Guide-for-Teachers/Firth/p/book/9781032480152
 
-- title: Metacognition and Study Skills
-  cover: metacognition_study_skills.jpeg
-  description: This is a second copy of the same book to test that the data file is working. It should be replaced with a different book.
-  link: https://www.routledge.com/Metacognition-and-Study-Skills-A-Guide-for-Teachers/Firth/p/book/9781032480152
+- title: What Teachers Need To Know About Memory
+  cover: wtntkam.jpg
+  description: A comprehensive guide to how memory works, and everything teachers need to know about applying memory principles in the classroom.
+  link: https://firth.substack.com/p/what-teachers-need-to-know-about
+
+- title: The Teacher's Guide To Research
+  cover: tgr.png
+  description: A comprehensive guide to engaging with, applying and conducting research in the classroom.<br><br>Researchers is not just for academics! This book is perfect for practising schools teachers, student teachers and educational leaders who are looking to expand their research knowledge and rekindle their professional curiosity.
+  link: http://mybook.to/TGR
+
+- title: "Creative Thinking: Practical Strategies To Boost Ideas, Productivity And Flow"
+  cover: creative_thinking.jpg
+  description: Boost the effectiveness and the quality of your creative thinking with these simple, evidence-based strategies.<br><br>This book will guide you through the stages of the creative process, from idea generation to effective work habits. All of the strategies are rooted in cutting-edge cognitive science. They can be applied to artistic pursuits such as writing and painting, and also to business, education, hobbies, and much more.<br><br>Divided into two sections - "thoughts and ideas" and "craft and habits" - this practical guidance will help you unlock your creative potential.
+  link: https://books2read.com/u/m2roEj
+
+- title: "How To Learn"
+  cover: HTLcover.jpeg
+  description: "Studying can be hard work, but you don't always make as much progress as you'd like. This book for school and university students covers practical solutions for use at all stages of learning, from note taking and textbook reading all the way through to exam preparation and the final stages of revision.<br><br>Informed by current research evidence from cognitive psychology, this is the ideal handbook to getting the most from your studies.**NOTE: link leads to old site, is it available anywhere else**"
+  link: https://www.jonathanfirth.co.uk/shop
+
+- title: "Psychology In The Classroom"
+  cover: psychology_classroom_cover.jpg
+  description: "Psychology is fundamental to learning and teaching. This book for teachers and lecturers provides a detailed and evidence-based yet very accessible guide to memory, motivation, and other cognitive and emotional concepts.<br><br>Co-authored by Marc Smith, the book maintains a focus on practical strategies to improve learning and well-being throughout, and is packed with insights and research-based strategies."
+  link: http://books2read.com/u/m2PDn7
