--- a/_data/books.yml
+++ b/_data/books.yml
@@ -3,7 +3,7 @@
 
 # put cover images in assets folder then copy the filename exactly into cover
 
-- title: Metacognition and Study Skills
+- title: "Metacognition and Study Skills: A Guide for Teachers"
   cover: metacognition_study_skills.jpeg
   description: This book for teachers covers every aspect of the metacognitive processes that underpin effective learning, from myths about learning to how a student’s memory really works.<br><br>It is packed with quick-to-apply classroom strategies for before, during, and after tasks, and also covers the independent study skills that students need.<br><br>This is the guide you need to developing a metacognitive approach to teaching, and a culture of metacognition in your whole school.
   link: https://www.routledge.com/Metacognition-and-Study-Skills-A-Guide-for-Teachers/Firth/p/book/9781032480152
