--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #site settings
 title: Jonathan Firth – Psychology of Education
 description: This is the summary that shows up in google search results
-url: "https://neezes.github.io"
-baseurl: "/skills-github-pages"
+url: "jonathanfirth.co.uk"
+baseurl: ""
 
 email:
 twitter_username: JW_Firth
